objects/MedProBT__Demo_Object__c.object
<CustomObject>
    <fields>
        <fullName>MedProBT__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Demo Objects</relationshipLabel>
        <relationshipName>Demo_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MedProBT__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Designation__c</fullName>
        <label>Designation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__External_ID__c</fullName>
        <label>MedPro ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Parent_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Object</label>
        <referenceTo>MedProBT__Parent_Object__c</referenceTo>
        <relationshipLabel>Demo Objects</relationshipLabel>
        <relationshipName>Demo_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Demo Object</label>
    <listViews>
        <fullName>MedProBT__All</fullName>
        <columns>NAME</columns>
        <columns>MedProBT__External_ID__c</columns>
        <columns>MedProBT__City__c</columns>
        <columns>MedProBT__Designation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Demo Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>